@@ -10,6 +10,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 
 - Pushing release-candidates to Pypi with ensured transparent versioning using git tags.
 - Added cycler and colormath package dependencies
+- Added pass-through kwargs from SpecifierStr.to_label() to SpecifierStr.to_tex()
 
 ## Changed
 
